--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,35 @@
+# ===============================
+# 🔧 SPRING BOOT APP CONFIG
+# ===============================
 spring.application.name=SpringBootSecurityApplication
+
+# ===============================
+# 🐘 POSTGRESQL CONFIG
+# ===============================
 spring.datasource.url=jdbc:postgresql://localhost:5432/moviebook
 spring.datasource.username=postgres
 spring.datasource.password=710563
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# App Properties
+# ===============================
+# 🔐 JWT CONFIG
+# ===============================
 moviebook.app.jwtSecret=iloveadsoftsitoilovegoogleilovelinuxilovegit
 moviebook.app.jwtExpirationMs=86400000
+
+# ===============================
+# 🌐 CORS CONFIG (para Angular)
+# ===============================
+spring.web.cors.allowed-origins=http://localhost:4200
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=Authorization,Content-Type
+spring.web.cors.allow-credentials=true
+
+# ===============================
+# 📦 LOGGING
+# ===============================
 logging.level.org.springframework.data.mongodb=ERROR
+logging.level.org.hibernate.SQL=DEBUG
